--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
 layout: home
-title: Not Cool AI
-subtitle: Nothing is cool about AI in this website!
+title: Randomly ordered
+subtitle: Everything is randomly ordered here!
 ---
